--- a/app/views/blog/myblog.html.erb
+++ b/app/views/blog/myblog.html.erb
@@ -1,2 +1,9 @@
+<div class="breadcrumbs">
+    <ol class="breadcrumb">
+		<li><a href="">Home</a> &raquo;</li>
+
+		<li>Blog</li>
+    </o>
+ </div>
 <h1>Blog#myblog</h1>
 <p>Find me in app/views/blog/myblog.html.erb</p>
