--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,32 +13,44 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript">
+		function hide_show() {
+			var e = document.getElementById("topNavBar");
+			if(e.style.display == 'block')
+				e.style.display = 'none';
+			else
+				e.style.display = 'block';
+		}
+	</script>
   </head>
 
   <body>
+
   	<div class="container">
-  		<nav class="navbar navbar-default">
+  		<nav class="navbar navbar-default" id="topNavBar">
   			<ul class="nav navbar-nav">
-  				<li><a> Home </a></li>
-  				<li><a> Albums </a></li>
-  				<li><a> Blog </a></li>	
-  				<li><a> About </a></li>
+  				<li><a href=""> Home </a></li>
+  				<li><a href="albums"> Albums </a></li>
+  				<li><a href="blog"> Blog </a></li>	
+  				<li><a href="about"> About </a></li>
   			</ul>
   			<nav class="nav navbar-nav navbar-right" style="margin-right: 5px;">
-  				<li><a> Login </a></li>
-  				<li><a> Sign Up </a></li>
+  				<li></li>
+  				<li><a href="login"> Login </a></li>
+  				<li><a href="users/new"> Sign Up </a></li>
   			</nav>
+  			
   		</nav>
-  		
+  		<button type="button" class="btn btn-primary btn-md" id="hideBt" onclick="hide_show()"> show </button>
 			<div class="row">
 			  <div class="col-sm-2">
 			    <div class="sidebar-nav">
 
 			          <ul class="nav navbar-nav">
-			            <li class="active"><a href="#">Menu Item 1</a></li>
-			            <li><a href="#">Menu Item 2</a></li>
-			            <li><a href="#">Menu Item 3</a></li>
-			            <li><a href="#">Menu Item 4</a></li>
+			            <li class="active"><a href="#">Du lịch</a></li>
+			            <li><a href="#">Ẩm thực</a></li>
+			            <li><a href="#">Văn hóa</a></li>
+			            <li><a href="#">Thể thao</a></li>
 			          </ul>
 			      
 			    </div>
@@ -50,3 +62,22 @@
 		
   </body>
 </html>
+
+<style>
+	#topNavBar {
+
+	}
+
+	@media only screen and (max-width: 992px) {
+		#topNavBar {
+			display: none;
+		}
+	}
+
+	@media only screen and (min-width: 992px){
+		#hideBt {
+			display: none;
+		}
+	}
+</style>
+	
